--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,23 @@
 .navBar {
   display: flex;
   flex-direction: column;
-  background-color: rgba(153, 155, 151, 0.198) !important;
+  background-color: rgba(179, 180, 178, 0) !important;
 }
 .butt{
   color:black !important;
   border: 0.1rem solid black !important;
   border-radius: 1rem !important;
   margin-right:  1rem !important;
+}
+.carro{
+display:flex;
+flex-direction: column;
+width: 50vw;
+height: 80vh;
+
+
+}
+.imagenes{
+  width: 100%;
+  height: 90%;
 }
