--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,12 @@
   border: 0.1rem solid black !important;
   border-radius: 1rem !important;
   margin-right:  1rem !important;
+  background-color: rgba(192, 188, 188, 0.63) !important;
 }
 .butt:hover{
   background-color:rgb(20, 20, 20) !important;
   font-size: 0.8rem !important;
+  color: white !important;
 }
 .carro{
 display:flex;
