--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,16 @@
   border-radius: 1rem !important;
   margin-right:  1rem !important;
   background-color: rgba(192, 188, 188, 0.63) !important;
+  text-decoration: none !important;
+  width: 3rem !important;
 }
 .butt:hover{
-  background-color:rgb(20, 20, 20) !important;
-  font-size: 0.8rem !important;
+  background-color: black !important;
   color: white !important;
+  font-size: 1rem !important;
+  
 }
+
 .carro{
 display:flex;
 flex-direction: column;
@@ -36,7 +40,11 @@ background-color: rgb(37, 36, 36);
 }
 .title-card{
   padding-bottom: 0.5rem;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
 }
+
 .title{
   text-align: center;
   padding-bottom: 1rem;
@@ -48,7 +56,6 @@ background-color: rgb(37, 36, 36);
   height: 130vh;
   background-size:cover;
   background-position:center;
-  font-family: 'Open Sans', sans-serif;
 }
 .article-hero{
   text-align: center; 
@@ -76,6 +83,7 @@ background-color: rgb(37, 36, 36);
   height: 10rem;
 
 }
+
 .btn{
   height: 2rem;
   width: 6rem;
@@ -83,5 +91,32 @@ background-color: rgb(37, 36, 36);
   padding:1rem;
   border-radius: 1rem !important;
   padding-bottom: 2rem !important;
+  text-decoration: none !important;
 }
 
+.cardsninamics{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 400vh;
+}
+.buttomlink{
+  text-decoration: none !important;
+  color:white;
+}
+.buttomlink1{
+  text-decoration: none !important;
+  color: black;
+}
+.buttomlink1:hover{
+  color: white;
+  font-size: 1rem;
+}
+.buttomlink2{
+  text-decoration: none;
+  color:black ;
+}
+.buttomlink2:hover{
+  color: white;
+  font-size: 1.1rem;
+}
