--- a/src/style/style.css
+++ b/src/style/style.css
@@ -23,11 +23,10 @@ body {
 
 .swiper-slide {
   text-align: center;
-  text-align: start;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+  text-decoration: none;
   background: rgb(206, 203, 203);
   height: calc((100% - 30px) / 2) !important;
-
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
