--- a/src/App.css
+++ b/src/App.css
@@ -70,14 +70,14 @@ background-color: rgb(37, 36, 36);
 }
 .imagenes{
   width: 100%;
-  height: 86%;
+  height: 42.1vh;
 }
 .title-card{
   padding-top: 0.5rem;
   text-decoration: none;
   color: black;
   cursor: pointer;
-  height: 14%;
+  height: 7vh;
 }
 .title-card:hover{
   color: black;
@@ -253,7 +253,7 @@ padding-top: 1.5rem;
 width: 100%;
 }
 .iconsocials{
-  height: 3rem;
+  height: 7vh;
   padding-left: 1rem  ;
 }
 
@@ -282,6 +282,10 @@ p{
 .title{
 font-size: 2rem;
 text-align: center;
+}
+.title-card{
+  font-size: 1.3rem;
+  padding-bottom: 1rem;
 }
   
 }
