--- a/src/App.css
+++ b/src/App.css
@@ -132,14 +132,79 @@ background-color: rgb(37, 36, 36);
   padding:1rem;
   border-radius: 1rem !important;
   padding-bottom: 2rem !important;
-  text-decoration: none !important;
+  text-decoration: none !important; 
 }
 
 .cardsninamics{
   display: flex;
- flex-direction: column;
-  width: 90%;
-  height:80%;
+  flex-wrap: wrap;
+  min-height: auto;
+  justify-content: center;
+  background-color: rgba(58, 57, 57, 0.739);
+  padding-bottom: 2rem;
+ 
+}
+
+.cardsdinamics1{
+  border: 1px solid white;
+  height: 60vh;
+  width: 30vw;
+  background: rgb(206, 203, 203);
+  text-align: center;
+  border-radius: 2rem;
+  
+}
+
+.css-46bh2p-MuiCardContent-root {
+    padding: 0 !important;
+}
+
+ .imagenescard{
+   width: 100%;
+   height: 89%;
+ }
+
+ .title-cardcities{
+   height: 10%;
+   width: 100%;
+   
+  }
+
+.titlecities{
+  height: 6rem;
+  width: 100%;
+  text-align: center;
+  font-size: 3rem;
+  color: white;
+  margin-top: 1rem;
+}
+.divinput{
+  background-color: rgba(58, 57, 57, 0.739);
+  text-align: center;
+  padding-top: 3rem;
+  height: 7rem;
+  border-top: 0.03rem solid white;
+}
+
+.input1{
+  height: 3rem;
+  width: 30rem;
+  padding:0.2rem 1.4rem;
+  border-radius: 2rem;
+  font-size: 1.4rem;
+  text-align: center;
+  border-top: none;
+  border-left: none;
+}
+
+
+.css-qpjsw6-MuiPaper-root-MuiCard-root {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 0;
+  margin: 0.5rem 0.5rem ;
+  box-shadow: 0.3em 0.3em 0.7em #00000015;
+  transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 button {
@@ -256,6 +321,34 @@ width: 100%;
   height: 7vh;
   padding-left: 1rem  ;
 }
+.welcomecities{
+  width:100wh;
+  height: 80vh;
+}
+.video1{
+  object-fit: cover;
+  object-position:center;
+ 
+  width: 100%;
+  z-index: -1;
+  height: 100%;
+}
+.buttomhome{
+  text-align: center;
+  position: absolute;
+  bottom:16rem;
+  left: 36rem;
+  z-index: 2;
+}
+
+
+
+/* ///////////////////////////////
+
+
+//////breakpoint respomsive//////
+//////////////////////////////// */
+
 
 @media only screen and (max-width: 768px) {
 p{
@@ -285,7 +378,10 @@ text-align: center;
 }
 .title-card{
   font-size: 1.3rem;
-  padding-bottom: 1rem;
+  
+  /* padding-bottom: 1rem; */
+  text-align: center !important
+  ;
 }
   
 }
