--- a/src/App.css
+++ b/src/App.css
@@ -152,18 +152,56 @@ background-color: rgb(37, 36, 36);
   display: flex;
   flex-direction: column;
   align-items: center;
-   background-color: rgb(156, 160, 160);
+  background-color: rgb(156, 160, 160);
 }
-.cardsid{
+.cards {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
   text-align: center;
   font-size: 1.2rem;
-  
   height: auto;
-  width: 60rem;
+  width: 70rem;
+  border: 1px solid white;
+  justify-content: space-around;
+  margin-bottom: 2rem;
+}
+
+.card {
+  width: auto;
+  height: auto;
+  box-shadow: 0 40px 60px -6px black;
+}
+
+.card-title {
+  display: block;
+  text-align: center;
+  color: rgb(248, 244, 244);
+  background-color: #5f6061;
+}
+
+.card img {
+  width: 100%;
+  height: 60vh;
+  display: block;
+  position: relative;
+}
+
+.card-desc {
+  display: block;
+  font-size: 1.7rem;
+  position: absolute;
+  height: 0;
+  top: 0;
+  opacity: 0;
+  padding: 6rem 1rem;
+  background-color: rgba(156, 153, 153, 0.5);
+  /* overflow-y: scroll; */
+  transition: 0.8s ease;
+}
+
+.card:hover .card-desc {
+  opacity: 1;
+  height: 100%;
 }
 
 .cardsdinamics1{
