--- a/src/App.css
+++ b/src/App.css
@@ -221,11 +221,12 @@ background-color: rgb(37, 36, 36);
   flex-direction: column;
   align-items: center;
   width: 80vw;
-  height: 14vh;
-  padding: 1rem 1rem;
-  border-radius: 1rem;
-  padding-top: 2rem;
+  height: 12vh;
+  padding: 0.5rem 1rem;
   margin-bottom:2rem;
+  border-radius: 2rem;
+  margin-bottom: 0.5rem;
+  background-color: white;
 
 }
 .infotineraries{
@@ -237,10 +238,11 @@ background-color: rgb(37, 36, 36);
   text-align: center;
   border-radius: 1rem;
   border-radius: 2rem !important;
+  padding-top: 1rem;
 }
 .imageuser{
-  width: 100px;
-  height: 100px;
+  width: 7rem;
+  height: 7rem;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
@@ -249,17 +251,45 @@ background-color: rgb(37, 36, 36);
   text-align: center;  
 }
 .imageuser img{
-  width: 96.2px;
-  height: 96.2px;
+  width: 6.8rem;
+  height: 6.8rem;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
+  padding: 0.2rem;  
+}
+h3{
+  margin-right: 2rem;
+}
+
+.price{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 10vh;
+  
+}
+.likes{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  width: 100%; 
+}
+.likes img{
+  height: 4rem;
+  width: auto;
+  margin-right: 1.5rem;
+  padding-bottom: 0.7rem;
+  
 }
 .activities{
-  background-color: #5f6061;
+  /* background-color: #5f6061; */
   width: 80vw;
   height: 50vh;
   text-align: center;
+  border-radius: 1rem;
 }
 
 .comments{
@@ -270,6 +300,18 @@ background-color: rgb(37, 36, 36);
     border: 1px solid black;
     margin: 1rem;
     color: red;
+    border-radius: 1rem;
+}
+.css-1i1ybjq-MuiButtonBase-root-MuiIconButton-root {
+  
+  
+  font-size: 1rem !important;
+  background-color: #d8dbdde8 !important;
+  border-radius: 0.5rem !important;
+  margin: 1rem   !important;
+  overflow: visible;
+  color: white !important;
+  border: 1px solid black !important;
 }
 .css-1k3rt34-MuiPaper-root-MuiCard-root {
   display: flex;
@@ -278,6 +320,28 @@ background-color: rgb(37, 36, 36);
   width: auto;
   height: auto;
   
+}
+.css-r5zog5-MuiPaper-root-MuiCard-root {
+  background-color:rgba(51, 50, 50, 0.568) !important;
+  color: rgba(0, 0, 0, 0.87);
+  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 2rem !important;
+  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
+  overflow: hidden;
+  max-width: auto;
+}
+.css-1rwjz6-MuiCardActions-root {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 8px;
+  height: 7vh !important;
 }
 .activitiescarrousell{
   display: flex;
@@ -293,6 +357,7 @@ background-color: rgb(37, 36, 36);
   background-image: url(../public/imagenes/under.jpg);
   background-repeat:initial;
   color: red;
+  border-radius: 1rem;
   
 }
 
