--- a/src/App.css
+++ b/src/App.css
@@ -247,8 +247,9 @@ background-color: rgb(37, 36, 36);
   -webkit-border-radius: 50%;
   border-radius: 50%;
   background: white;
-  border: 2px solid black;
-  text-align: center;  
+  border: 2px solid rgb(228, 7, 7);
+  text-align: center;
+
 }
 .imageuser img{
   width: 6.8rem;
