--- a/src/App.css
+++ b/src/App.css
@@ -226,14 +226,14 @@ background-color: rgb(37, 36, 36);
   margin-bottom:2rem;
   border-radius: 2rem;
   margin-bottom: 0.5rem;
-  background-color: white;
+  background-color: rgba(170, 166, 166, 0.65);
 
 }
 .infotineraries{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: rgba(170, 166, 166, 0.65);
   width: 80vw;
   text-align: center;
   border-radius: 1rem;
@@ -246,8 +246,8 @@ background-color: rgb(37, 36, 36);
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  background: white;
-  border: 2px solid rgb(228, 7, 7);
+  background: rgb(240, 234, 234);
+  border: 2px solid rgb(12, 0, 0);
   text-align: center;
 
 }
@@ -323,7 +323,7 @@ h3{
   
 }
 .css-r5zog5-MuiPaper-root-MuiCard-root {
-  background-color:rgba(51, 50, 50, 0.568) !important;
+  background-color:rgba(151, 148, 148, 0.568) !important;
   color: rgba(0, 0, 0, 0.87);
   -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
@@ -331,6 +331,7 @@ h3{
   box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
   overflow: hidden;
   max-width: auto;
+  margin-bottom: 3rem;
 }
 .css-1rwjz6-MuiCardActions-root {
   display: -webkit-box;
@@ -393,6 +394,24 @@ h3{
 
  .imagenescard:hover{
   border: #006fff 0.3em solid;
+ }
+ .noitineraries{
+  width: 80%;
+  height: 15rem;
+  background-image: url(./imagenes/loader);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  border-radius: 2rem;
+  color: white;
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+   
+ }
+ .noitineraries h1{
+  font-size: 4rem;
+  text-shadow: 6px 6px 6px black;
  }
 
  .title-cardcities{
@@ -661,5 +680,36 @@ width: 80vw;
 .carro{
 padding: 0 3rem;
 }
+.noitineraries h1{
+  font-size: 2.5rem;
+  text-shadow: 2px 2px 2px black;
+ }
+ .cards {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 0.1rem;
+  height: 70%;
+  width: 100%;
+  padding: 2rem 2rem;
+  border: 1px solid white;
+  justify-content: space-around;
+  margin-bottom: 2rem;
+  background-color: #282936;
+}
+.cards p{
+  font-size: 1rem;
+}
+h3 {
+  margin-right: 0.5rem;
+  font-size: 1rem;
+}
+.infotineraries{
+  padding: 0.5rem;
+}
+.titletineraries{
+  justify-content: flex-end;
+}
+
   
 }
