--- a/src/App.css
+++ b/src/App.css
@@ -617,6 +617,7 @@ width: 100%;
   background-image:url(../public/imagenes/sky.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+ 
 }
 .formsingup{
   display: flex;
@@ -632,7 +633,7 @@ width: 100%;
 	align-items: center;
 	justify-content: center;
 	min-height: 100%;
-  margin: 5rem 0;
+  margin: 6rem 0;
   
 }
 
@@ -679,7 +680,7 @@ width: 100%;
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #000000a2;
+	background: #000000;
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
@@ -700,7 +701,7 @@ width: 100%;
 .screen__background__shape4 {
 	height: 400px;
 	width: 200px;
-	background: #000000a2;
+	background: #000000fb;
 	top: 420px;
 	right: 50px;	
 	border-radius: 60px;
@@ -708,8 +709,9 @@ width: 100%;
 }
 
 .login {
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 2rem;
+  
 
 }
 
