--- a/src/App.css
+++ b/src/App.css
@@ -272,15 +272,9 @@ h3 {
   margin-right: 1.5rem;
   padding-bottom: 0.7rem;
 }
-.activities {
-  /* background-color: #5f6061; */
-  width: 80vw;
-  height: 50vh;
-  text-align: center;
-  border-radius: 1rem;
-}
 
-.comments {
+
+/* .comments {
   background-image: url(../public/imagenes/under.jpg);
   width: 78vw;
   height: 40vh;
@@ -289,7 +283,7 @@ h3 {
   margin: 1rem;
   color: red;
   border-radius: 1rem;
-}
+} */
 .css-1i1ybjq-MuiButtonBase-root-MuiIconButton-root {
   font-size: 1rem !important;
   background-color: #d8dbdde8 !important;
@@ -844,16 +838,59 @@ h2{
   padding-bottom: 1.8rem;
 }
 .button2{
-  display: flex;
+  display: flex;  
   flex-direction: column;
   align-items: center;
    width: 100%;
    padding-top: 2rem;
 }
+/*///////////////////////////////////////////////////////////
+/* ////////////////Activities///////////////////////////// */
+.activities{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 78vw;
+  margin: 1rem 1rem;
+  height: 60vh;
+}
+.imageactivities{
+  display: flex;
+  justify-content: space-between;
+  width: 76vw;
+  margin-top: 1rem;
+ 
+}
+.imageactivities .imagenes{
+margin-right: 1rem;
+width: 24vw;
+height: 46vh;
+border-radius: 1rem;
+
+}
+.imageactivities div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  }
+
+.css-9l5vo-MuiCollapse-wrapperInner {
+  width: 128% !important;
+}
+.css-smkl36-MuiCollapse-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 126% !important;
+}
+.css-46bh2p-MuiCardContent-root:last-child {
+ width: 100% !important;
+  
+}
 
 /* ///////////////////////////////
-
-
 //////breakpoint respomsive//////
 //////////////////////////////// */
 
