--- a/src/App.css
+++ b/src/App.css
@@ -844,6 +844,9 @@ h2{
    width: 100%;
    padding-top: 2rem;
 }
+h5{
+  text-align: center;
+}
 /*///////////////////////////////////////////////////////////
 /* ////////////////Activities///////////////////////////// */
 .activities{
@@ -851,8 +854,10 @@ h2{
   flex-direction: column;
   align-items: center;
   width: 78vw;
-  margin: 1rem 1rem;
-  height: 60vh;
+  height: 68vh;
+  margin-left: 0.8rem;
+  background-color: white;
+  border-radius: 1rem;
 }
 .imageactivities{
   display: flex;
