--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,18 @@
   opacity: 1;
   height: 100%;
 }
+.swiper-slide {
+  text-align: center;
+  font-size: 1.5rem;
+  text-decoration: none;
+  background: rgb(206, 203, 203);
+  height: calc((100% - 30px) / 2) !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 0.8rem;
+}
 .tineraries {
   display: flex !important;
   flex-direction: column !important;
@@ -243,6 +255,15 @@
 .imageuser img {
   width: 6.8rem;
   height: 6.8rem;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  padding: 0.2rem;
+}
+
+.imgcomments{
+  width: 1.8rem;
+  height: 1.8rem;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
@@ -894,6 +915,45 @@ border-radius: 1rem;
  width: 100% !important;
   
 }
+.likeDislike{
+  display: flex;
+  width: 8vw;
+}
+/* ///////////////////////////////
+//////Comments///////////////////
+//////////////////////////////// */
+
+.comments{
+  padding: 0.5rem 0.7rem;
+  width: 80vw;
+  border-radius: 2rem;
+}
+.comments h1{
+
+  background-color: white;
+  height: 4rem;
+  text-align: center;
+  border-radius: 1rem;
+  margin-top: 1.5rem;
+}
+
+.card-header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 1.5rem;
+}
+.card-header img{
+  height: 7vh;
+  width: 4vw;
+}
+textarea{
+  width: 64vw;
+ padding: 0.2rem   0.5rem;
+ height: 5vh;
+ border-radius: 0.5rem;
+}
 
 /* ///////////////////////////////
 //////breakpoint respomsive//////
@@ -1016,7 +1076,57 @@ border-radius: 1rem;
   border: 2px solid black;
 	
 }
+.login1 {
+  margin-top: 1rem;
+  padding: 7rem 2rem 2rem 4rem;
+  display: flex;
+  flex-direction: column;
+  height: 68vh;
+  align-items: center;
+  
 }
+
+.imageactivities .imagenes{
+  margin-right: 0.3rem;
+  max-width: 85%;
+  height: 30vh;
+  border-radius: 1rem;
+  
+  }
+
+
+  .activities {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 78vw;
+    height: 52vh;
+    margin-left: 0.4rem;
+    background-color: white;
+    border-radius: 1rem;
+}
+.imageactivities div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.imageactivities {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  width: 96%;
+  margin-top: 1rem;
+}
+
+.card-header img{
+  height: 5vh;
+  width: 7vw;
+}
+}
+
+
+
 @media screen and (max-width: 992px) {
   .my-facebook-button-class{
     background-color: rgb(52, 52, 207);
